operating_system/y.output
Terminals unused in grammar

   DEFINE
   signed_int
   REL_OP
   LOGICAL
   CHAR_DATA
   QUOTE
   POINTERARROW
   QUEST
   BACKSLASH
   SQUAREOPENBRACKET
   SQUARECLOSEBRACKET
   THEN
   TYPEDEF
   BREAK
   DEFAULT
   none
   TABSPACE


State 100 conflicts: 1 shift/reduce
State 128 conflicts: 1 shift/reduce


Grammar

    0 $accept: start_main $end

    1 start_main: start_1

    2 start_1: Macros start_2
    3        | Macros
    4        | /* empty */

    5 Macros: HASH INCLUDE LESST IDENTIFIER DOT IDENTIFIER GREAT Macros1
    6       | HASH INCLUDE STRINGLITERAL Macros1

    7 Macros1: Macros
    8        | /* empty */

    9 start_2: Function start_2
   10        | Function start_1
   11        | Declaration1 start_2

   12 @1: /* empty */

   13 $@2: /* empty */

   14 Function: TYPE MAIN PARENOPEN @1 Arg_List $@2 PARENCLOSE Compound_State

   15 @3: /* empty */

   16 $@4: /* empty */

   17 Function: TYPE IDENTIFIER PARENOPEN @3 Arg_List $@4 PARENCLOSE BRACEOPEN State_List BRACECLOSE

   18 Arg_List: Arg_List COMMA Arg
   19         | Arg
   20         | /* empty */
   21         | Arg_List error Arg

   22 Arg: TYPE IDENTIFIER

   23 TYPE: INTEGER
   24     | FLOAT
   25     | CHARACTER
   26     | DOUBLE
   27     | VOLATILE
   28     | SIGNED INTEGER
   29     | UNSIGNED INTEGER
   30     | SIGNED SHORT
   31     | SIGNED LONG
   32     | UNSIGNED SHORT
   33     | UNSIGNED LONG
   34     | LONG
   35     | SHORT
   36     | BOOLEAN
   37     | CONST INTEGER
   38     | CONST FLOAT
   39     | CONST CHARACTER
   40     | VOID
   41     | STRUCT IDENTIFIER
   42     | ENUM IDENTIFIER

   43 NUM: SIGN_SHORT
   44    | UNSIGN_SHORT
   45    | SIGN_LONG
   46    | UNSIGN_LONG
   47    | SIGN_INT
   48    | UNSIGN_INT
   49    | FLOAT_DATA

   50 Declaration1: TYPE Assignment SEMICOLON
   51             | Assignment SEMICOLON
   52             | Function_Call SEMICOLON
   53             | Struct_State SEMICOLON
   54             | Enum_State SEMICOLON

   55 id_declarator: IDENTIFIER

   56 marker: /* empty */

   57 type_marker: /* empty */

   58 Assignment: Assignment EQUALTO Assignment
   59           | Assignment EQUALTO Function_Call
   60           | NUM
   61           | id_declarator
   62           | Assignment COMMA type_marker Assignment
   63           | Assignment PLUS marker Assignment
   64           | Assignment MINUS marker Assignment
   65           | Assignment ASTERISK marker Assignment
   66           | Assignment DIV marker Assignment
   67           | Assignment MOD marker Assignment
   68           | Assignment INCR
   69           | Assignment DECR
   70           | INCR Assignment
   71           | DECR Assignment
   72           | Assignment BINARYONESCOMPLEMENT Assignment
   73           | Assignment BINARYAND Assignment
   74           | Assignment BINARYOR Assignment
   75           | Assignment BINARYXOR Assignment
   76           | Assignment LSHIFT Assignment
   77           | Assignment RSHIFT Assignment
   78           | PARENOPEN Assignment PARENCLOSE
   79           | MINUS Assignment
   80           | PLUS Assignment

   81 Expr: PARENOPEN Expr PARENCLOSE
   82     | Expr LEQ Expr
   83     | Expr GEQ Expr
   84     | Expr GREAT Expr
   85     | Expr LESST Expr
   86     | Expr NOTEQ Expr
   87     | Expr IFEQUAL Expr
   88     | Expr NOTEQ1 Expr
   89     | Expr OR Expr
   90     | Expr AND Expr
   91     | Expr PLUSEQ Expr
   92     | Expr MINUSEQ Expr
   93     | Expr DIVEQ Expr
   94     | Expr MULEQ Expr
   95     | Expr LSHIFTEQ Expr
   96     | Expr RSHIFTEQ Expr
   97     | Expr BITANDEQ Expr
   98     | Expr BITOREQ Expr
   99     | Expr BITXOREQ Expr
  100     | Expr MODEQ Expr
  101     | NOT Expr
  102     | BINARYONESCOMPLEMENT Expr
  103     | Assignment
  104     | /* empty */

  105 Expr_Loop: Expr_Loop COMMA Expr
  106          | Expr

  107 Function_Call: IDENTIFIER PARENOPEN Expr_Loop PARENCLOSE

  108 While_State: WHILE PARENOPEN marker Expr PARENCLOSE Compound_State

  109 Do_While_State: DO Compound_State WHILE PARENOPEN marker Expr PARENCLOSE

  110 For_State: FOR PARENOPEN marker Expr SEMICOLON marker Expr_Loop SEMICOLON marker Expr_Loop PARENCLOSE Compound_State

  111 Case_State: CASE CONST COLON State_List

  112 Case_List: Case_List Case_State
  113          | Case_State

  114 Case_Compd: BRACEOPEN Case_List BRACECLOSE

  115 Switch_State: SWITCH PARENOPEN Expr PARENCLOSE Case_Compd

  116 Assign_List: Assign_List TYPE id_declarator SEMICOLON
  117            | /* empty */

  118 $@5: /* empty */

  119 Struct_State: STRUCT IDENTIFIER BRACEOPEN $@5 Assign_List BRACECLOSE

  120 $@6: /* empty */

  121 Enum_State: ENUM BRACEOPEN $@6 enumerator_list BRACECLOSE

  122 @7: /* empty */

  123 $@8: /* empty */

  124 Enum_State: ENUM IDENTIFIER @7 BRACEOPEN $@8 enumerator_list BRACECLOSE
  125           | ENUM IDENTIFIER

  126 enumerator_list: enumerator
  127                | enumerator_list COMMA enumerator

  128 enumerator: IDENTIFIER
  129           | IDENTIFIER EQUALTO NUM

  130 Print_Funct: PRINTF PARENOPEN STRINGLITERAL PARENCLOSE SEMICOLON
  131            | PRINTF PARENOPEN argt COMMA marker id_declarator PARENCLOSE SEMICOLON

  132 argt: PD
  133     | PF

  134 State: While_State
  135      | Declaration1
  136      | For_State
  137      | Switch_State
  138      | Print_Funct
  139      | Do_While_State SEMICOLON
  140      | CONTINUE SEMICOLON
  141      | RETURN Expr SEMICOLON

  142 $@9: /* empty */

  143 Compound_State: BRACEOPEN $@9 State_List BRACECLOSE

  144 State_List: State_List Stmt
  145           | /* empty */

  146 $@10: /* empty */

  147 Stmt: IF PARENOPEN marker Expr PARENCLOSE $@10 Compound_State ELSE_OPTIONAL
  148     | State
  149     | Compound_State

  150 ELSE_OPTIONAL: ELSE Stmt
  151              | /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256) 21
MAIN (258) 14
CONTINUE (259) 140
ASTERISK (260) 65
BOOLEAN (261) 36
PRINTF (262) 130 131
DEFINE (263)
INCR (264) 68 70
DECR (265) 69 71
MOD (266) 67
PD (267) 132
PF (268) 133
PLUS (269) 63 80
MINUS (270) 64 79
DIV (271) 66
signed_int (272)
REL_OP (273)
INTEGER (274) 23 28 29 37
LOGICAL (275)
CHARACTER (276) 25 39
CHAR_DATA (277)
STRINGLITERAL (278) 6 130
FLOAT (279) 24 38
DOUBLE (280) 26
LONG (281) 31 33 34
SHORT (282) 30 32 35
VOLATILE (283) 27
SIGNED (284) 28 30 31
VOID (285) 40
CONST (286) 37 38 39 111
BINARYXOR (287) 75
EQUALTO (288) 58 59 129
BINARYONESCOMPLEMENT (289) 72 102
QUOTE (290)
COLON (291) 111
BINARYAND (292) 73
BINARYOR (293) 74
DOT (294) 5
SEMICOLON (295) 50 51 52 53 54 110 116 130 131 139 140 141
COMMA (296) 18 62 105 127 131
AND (297) 90
OR (298) 89
LSHIFT (299) 76
RSHIFT (300) 77
PLUSEQ (301) 91
MINUSEQ (302) 92
MULEQ (303) 94
DIVEQ (304) 93
BITANDEQ (305) 97
BITOREQ (306) 98
BITXOREQ (307) 99
MODEQ (308) 100
LSHIFTEQ (309) 95
RSHIFTEQ (310) 96
POINTERARROW (311)
NOT (312) 101
NOTEQ1 (313) 88
QUEST (314)
BACKSLASH (315)
PARENCLOSE (316) 14 17 78 81 107 108 109 110 115 130 131 147
PARENOPEN (317) 14 17 78 81 107 108 109 110 115 130 131 147
SQUAREOPENBRACKET (318)
SQUARECLOSEBRACKET (319)
BRACECLOSE (320) 17 114 119 121 124 143
BRACEOPEN (321) 17 114 119 121 124 143
HASH (322) 5 6
IF (323) 147
ELSE (324) 150
THEN (325)
WHILE (326) 108 109
FOR (327) 110
INCLUDE (328) 5 6
TYPEDEF (329)
BREAK (330)
SWITCH (331) 115
ENUM (332) 42 121 124 125
STRUCT (333) 41 119
DO (334) 109
DEFAULT (335)
none (336)
CASE (337) 111
IDENTIFIER (338) 5 17 22 41 42 55 107 119 124 125 128 129
IFEQUAL (339) 87
RETURN (340) 141
UNSIGNED (341) 29 32 33
SIGN_SHORT (342) 43
UNSIGN_SHORT (343) 44
SIGN_LONG (344) 45
UNSIGN_LONG (345) 46
SIGN_INT (346) 47
UNSIGN_INT (347) 48
FLOAT_DATA (348) 49
TABSPACE (349)
NOTEQ (350) 86
GEQ (351) 83
LEQ (352) 82
GREAT (353) 5 84
LESST (354) 5 85
UPLUS (355)
PDECR (356)
PINCR (357)
UMINUS (358)


Nonterminals, with rules where they appear

$accept (104)
    on left: 0
start_main (105)
    on left: 1, on right: 0
start_1 (106)
    on left: 2 3 4, on right: 1 10
Macros (107)
    on left: 5 6, on right: 2 3 7
Macros1 (108)
    on left: 7 8, on right: 5 6
start_2 (109)
    on left: 9 10 11, on right: 2 9 11
Function (110)
    on left: 14 17, on right: 9 10
@1 (111)
    on left: 12, on right: 14
$@2 (112)
    on left: 13, on right: 14
@3 (113)
    on left: 15, on right: 17
$@4 (114)
    on left: 16, on right: 17
Arg_List (115)
    on left: 18 19 20 21, on right: 14 17 18 21
Arg (116)
    on left: 22, on right: 18 19 21
TYPE (117)
    on left: 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40
    41 42, on right: 14 17 22 50 116
NUM (118)
    on left: 43 44 45 46 47 48 49, on right: 60 129
Declaration1 (119)
    on left: 50 51 52 53 54, on right: 11 135
id_declarator (120)
    on left: 55, on right: 61 116 131
marker (121)
    on left: 56, on right: 63 64 65 66 67 108 109 110 131 147
type_marker (122)
    on left: 57, on right: 62
Assignment (123)
    on left: 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75
    76 77 78 79 80, on right: 50 51 58 59 62 63 64 65 66 67 68 69 70
    71 72 73 74 75 76 77 78 79 80 103
Expr (124)
    on left: 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98
    99 100 101 102 103 104, on right: 81 82 83 84 85 86 87 88 89 90
    91 92 93 94 95 96 97 98 99 100 101 102 105 106 108 109 110 115
    141 147
Expr_Loop (125)
    on left: 105 106, on right: 105 107 110
Function_Call (126)
    on left: 107, on right: 52 59
While_State (127)
    on left: 108, on right: 134
Do_While_State (128)
    on left: 109, on right: 139
For_State (129)
    on left: 110, on right: 136
Case_State (130)
    on left: 111, on right: 112 113
Case_List (131)
    on left: 112 113, on right: 112 114
Case_Compd (132)
    on left: 114, on right: 115
Switch_State (133)
    on left: 115, on right: 137
Assign_List (134)
    on left: 116 117, on right: 116 119
Struct_State (135)
    on left: 119, on right: 53
$@5 (136)
    on left: 118, on right: 119
Enum_State (137)
    on left: 121 124 125, on right: 54
$@6 (138)
    on left: 120, on right: 121
@7 (139)
    on left: 122, on right: 124
$@8 (140)
    on left: 123, on right: 124
enumerator_list (141)
    on left: 126 127, on right: 121 124 127
enumerator (142)
    on left: 128 129, on right: 126 127
Print_Funct (143)
    on left: 130 131, on right: 138
argt (144)
    on left: 132 133, on right: 131
State (145)
    on left: 134 135 136 137 138 139 140 141, on right: 148
Compound_State (146)
    on left: 143, on right: 14 108 109 110 147 149
$@9 (147)
    on left: 142, on right: 143
State_List (148)
    on left: 144 145, on right: 17 111 143 144
Stmt (149)
    on left: 147 148 149, on right: 144 150
$@10 (150)
    on left: 146, on right: 147
ELSE_OPTIONAL (151)
    on left: 150 151, on right: 147


state 0

    0 $accept: . start_main $end

    HASH  shift, and go to state 1

    $default  reduce using rule 4 (start_1)

    start_main  go to state 2
    start_1     go to state 3
    Macros      go to state 4


state 1

    5 Macros: HASH . INCLUDE LESST IDENTIFIER DOT IDENTIFIER GREAT Macros1
    6       | HASH . INCLUDE STRINGLITERAL Macros1

    INCLUDE  shift, and go to state 5


state 2

    0 $accept: start_main . $end

    $end  shift, and go to state 6


state 3

    1 start_main: start_1 .

    $default  reduce using rule 1 (start_main)


state 4

    2 start_1: Macros . start_2
    3        | Macros .

    BOOLEAN       shift, and go to state 7
    INCR          shift, and go to state 8
    DECR          shift, and go to state 9
    PLUS          shift, and go to state 10
    MINUS         shift, and go to state 11
    INTEGER       shift, and go to state 12
    CHARACTER     shift, and go to state 13
    FLOAT         shift, and go to state 14
    DOUBLE        shift, and go to state 15
    LONG          shift, and go to state 16
    SHORT         shift, and go to state 17
    VOLATILE      shift, and go to state 18
    SIGNED        shift, and go to state 19
    VOID          shift, and go to state 20
    CONST         shift, and go to state 21
    PARENOPEN     shift, and go to state 22
    ENUM          shift, and go to state 23
    STRUCT        shift, and go to state 24
    IDENTIFIER    shift, and go to state 25
    UNSIGNED      shift, and go to state 26
    SIGN_SHORT    shift, and go to state 27
    UNSIGN_SHORT  shift, and go to state 28
    SIGN_LONG     shift, and go to state 29
    UNSIGN_LONG   shift, and go to state 30
    SIGN_INT      shift, and go to state 31
    UNSIGN_INT    shift, and go to state 32
    FLOAT_DATA    shift, and go to state 33

    $default  reduce using rule 3 (start_1)

    start_2        go to state 34
    Function       go to state 35
    TYPE           go to state 36
    NUM            go to state 37
    Declaration1   go to state 38
    id_declarator  go to state 39
    Assignment     go to state 40
    Function_Call  go to state 41
    Struct_State   go to state 42
    Enum_State     go to state 43


state 5

    5 Macros: HASH INCLUDE . LESST IDENTIFIER DOT IDENTIFIER GREAT Macros1
    6       | HASH INCLUDE . STRINGLITERAL Macros1

    STRINGLITERAL  shift, and go to state 44
    LESST          shift, and go to state 45


state 6

    0 $accept: start_main $end .

    $default  accept


state 7

   36 TYPE: BOOLEAN .

    $default  reduce using rule 36 (TYPE)


state 8

   70 Assignment: INCR . Assignment

    INCR          shift, and go to state 8
    DECR          shift, and go to state 9
    PLUS          shift, and go to state 10
    MINUS         shift, and go to state 11
    PARENOPEN     shift, and go to state 22
    IDENTIFIER    shift, and go to state 46
    SIGN_SHORT    shift, and go to state 27
    UNSIGN_SHORT  shift, and go to state 28
    SIGN_LONG     shift, and go to state 29
    UNSIGN_LONG   shift, and go to state 30
    SIGN_INT      shift, and go to state 31
    UNSIGN_INT    shift, and go to state 32
    FLOAT_DATA    shift, and go to state 33

    NUM            go to state 37
    id_declarator  go to state 39
    Assignment     go to state 47


state 9

   71 Assignment: DECR . Assignment

    INCR          shift, and go to state 8
    DECR          shift, and go to state 9
    PLUS          shift, and go to state 10
    MINUS         shift, and go to state 11
    PARENOPEN     shift, and go to state 22
    IDENTIFIER    shift, and go to state 46
    SIGN_SHORT    shift, and go to state 27
    UNSIGN_SHORT  shift, and go to state 28
    SIGN_LONG     shift, and go to state 29
    UNSIGN_LONG   shift, and go to state 30
    SIGN_INT      shift, and go to state 31
    UNSIGN_INT    shift, and go to state 32
    FLOAT_DATA    shift, and go to state 33

    NUM            go to state 37
    id_declarator  go to state 39
    Assignment     go to state 48


state 10

   80 Assignment: PLUS . Assignment

    INCR          shift, and go to state 8
    DECR          shift, and go to state 9
    PLUS          shift, and go to state 10
    MINUS         shift, and go to state 11
    PARENOPEN     shift, and go to state 22
    IDENTIFIER    shift, and go to state 46
    SIGN_SHORT    shift, and go to state 27
    UNSIGN_SHORT  shift, and go to state 28
    SIGN_LONG     shift, and go to state 29
    UNSIGN_LONG   shift, and go to state 30
    SIGN_INT      shift, and go to state 31
    UNSIGN_INT    shift, and go to state 32
    FLOAT_DATA    shift, and go to state 33

    NUM            go to state 37
    id_declarator  go to state 39
    Assignment     go to state 49


state 11

   79 Assignment: MINUS . Assignment

    INCR          shift, and go to state 8
    DECR          shift, and go to state 9
    PLUS          shift, and go to state 10
    MINUS         shift, and go to state 11
    PARENOPEN     shift, and go to state 22
    IDENTIFIER    shift, and go to state 46
    SIGN_SHORT    shift, and go to state 27
    UNSIGN_SHORT  shift, and go to state 28
    SIGN_LONG     shift, and go to state 29
    UNSIGN_LONG   shift, and go to state 30
    SIGN_INT      shift, and go to state 31
    UNSIGN_INT    shift, and go to state 32
    FLOAT_DATA    shift, and go to state 33

    NUM            go to state 37
    id_declarator  go to state 39
    Assignment     go to state 50


state 12

   23 TYPE: INTEGER .

    $default  reduce using rule 23 (TYPE)


state 13

   25 TYPE: CHARACTER .

    $default  reduce using rule 25 (TYPE)


state 14

   24 TYPE: FLOAT .

    $default  reduce using rule 24 (TYPE)


state 15

   26 TYPE: DOUBLE .

    $default  reduce using rule 26 (TYPE)


state 16

   34 TYPE: LONG .

    $default  reduce using rule 34 (TYPE)


state 17

   35 TYPE: SHORT .

    $default  reduce using rule 35 (TYPE)


state 18

   27 TYPE: VOLATILE .

    $default  reduce using rule 27 (TYPE)


state 19

   28 TYPE: SIGNED . INTEGER
   30     | SIGNED . SHORT
   31     | SIGNED . LONG

    INTEGER  shift, and go to state 51
    LONG     shift, and go to state 52
    SHORT    shift, and go to state 53


state 20

   40 TYPE: VOID .

    $default  reduce using rule 40 (TYPE)


state 21

   37 TYPE: CONST . INTEGER
   38     | CONST . FLOAT
   39     | CONST . CHARACTER

    INTEGER    shift, and go to state 54
    CHARACTER  shift, and go to state 55
    FLOAT      shift, and go to state 56


state 22

   78 Assignment: PARENOPEN . Assignment PARENCLOSE

    INCR          shift, and go to state 8
    DECR          shift, and go to state 9
    PLUS          shift, and go to state 10
    MINUS         shift, and go to state 11
    PARENOPEN     shift, and go to state 22
    IDENTIFIER    shift, and go to state 46
    SIGN_SHORT    shift, and go to state 27
    UNSIGN_SHORT  shift, and go to state 28
    SIGN_LONG     shift, and go to state 29
    UNSIGN_LONG   shift, and go to state 30
    SIGN_INT      shift, and go to state 31
    UNSIGN_INT    shift, and go to state 32
    FLOAT_DATA    shift, and go to state 33

    NUM            go to state 37
    id_declarator  go to state 39
    Assignment     go to state 57


state 23

   42 TYPE: ENUM . IDENTIFIER
  121 Enum_State: ENUM . BRACEOPEN $@6 enumerator_list BRACECLOSE
  124           | ENUM . IDENTIFIER @7 BRACEOPEN $@8 enumerator_list BRACECLOSE
  125           | ENUM . IDENTIFIER

    BRACEOPEN   shift, and go to state 58
    IDENTIFIER  shift, and go to state 59


state 24

   41 TYPE: STRUCT . IDENTIFIER
  119 Struct_State: STRUCT . IDENTIFIER BRACEOPEN $@5 Assign_List BRACECLOSE

    IDENTIFIER  shift, and go to state 60


state 25

   55 id_declarator: IDENTIFIER .
  107 Function_Call: IDENTIFIER . PARENOPEN Expr_Loop PARENCLOSE

    PARENOPEN  shift, and go to state 61

    $default  reduce using rule 55 (id_declarator)


state 26

   29 TYPE: UNSIGNED . INTEGER
   32     | UNSIGNED . SHORT
   33     | UNSIGNED . LONG

    INTEGER  shift, and go to state 62
    LONG     shift, and go to state 63
    SHORT    shift, and go to state 64


state 27

   43 NUM: SIGN_SHORT .

    $default  reduce using rule 43 (NUM)


state 28

   44 NUM: UNSIGN_SHORT .

    $default  reduce using rule 44 (NUM)


state 29

   45 NUM: SIGN_LONG .

    $default  reduce using rule 45 (NUM)


state 30

   46 NUM: UNSIGN_LONG .

    $default  reduce using rule 46 (NUM)


state 31

   47 NUM: SIGN_INT .

    $default  reduce using rule 47 (NUM)


state 32

   48 NUM: UNSIGN_INT .

    $default  reduce using rule 48 (NUM)


state 33

   49 NUM: FLOAT_DATA .

    $default  reduce using rule 49 (NUM)


state 34

    2 start_1: Macros start_2 .

    $default  reduce using rule 2 (start_1)


state 35

    9 start_2: Function . start_2
   10        | Function . start_1

    BOOLEAN       shift, and go to state 7
    INCR          shift, and go to state 8
    DECR          shift, and go to state 9
    PLUS          shift, and go to state 10
    MINUS         shift, and go to state 11
    INTEGER       shift, and go to state 12
    CHARACTER     shift, and go to state 13
    FLOAT         shift, and go to state 14
    DOUBLE        shift, and go to state 15
    LONG          shift, and go to state 16
    SHORT         shift, and go to state 17
    VOLATILE      shift, and go to state 18
    SIGNED        shift, and go to state 19
    VOID          shift, and go to state 20
    CONST         shift, and go to state 21
    PARENOPEN     shift, and go to state 22
    HASH          shift, and go to state 1
    ENUM          shift, and go to state 23
    STRUCT        shift, and go to state 24
    IDENTIFIER    shift, and go to state 25
    UNSIGNED      shift, and go to state 26
    SIGN_SHORT    shift, and go to state 27
    UNSIGN_SHORT  shift, and go to state 28
    SIGN_LONG     shift, and go to state 29
    UNSIGN_LONG   shift, and go to state 30
    SIGN_INT      shift, and go to state 31
    UNSIGN_INT    shift, and go to state 32
    FLOAT_DATA    shift, and go to state 33

    $default  reduce using rule 4 (start_1)

    start_1        go to state 65
    Macros         go to state 4
    start_2        go to state 66
    Function       go to state 35
    TYPE           go to state 36
    NUM            go to state 37
    Declaration1   go to state 38
    id_declarator  go to state 39
    Assignment     go to state 40
    Function_Call  go to state 41
    Struct_State   go to state 42
    Enum_State     go to state 43


state 36

   14 Function: TYPE . MAIN PARENOPEN @1 Arg_List $@2 PARENCLOSE Compound_State
   17         | TYPE . IDENTIFIER PARENOPEN @3 Arg_List $@4 PARENCLOSE BRACEOPEN State_List BRACECLOSE
   50 Declaration1: TYPE . Assignment SEMICOLON

    MAIN          shift, and go to state 67
    INCR          shift, and go to state 8
    DECR          shift, and go to state 9
    PLUS          shift, and go to state 10
    MINUS         shift, and go to state 11
    PARENOPEN     shift, and go to state 22
    IDENTIFIER    shift, and go to state 68
    SIGN_SHORT    shift, and go to state 27
    UNSIGN_SHORT  shift, and go to state 28
    SIGN_LONG     shift, and go to state 29
    UNSIGN_LONG   shift, and go to state 30
    SIGN_INT      shift, and go to state 31
    UNSIGN_INT    shift, and go to state 32
    FLOAT_DATA    shift, and go to state 33

    NUM            go to state 37
    id_declarator  go to state 39
    Assignment     go to state 69


state 37

   60 Assignment: NUM .

    $default  reduce using rule 60 (Assignment)


state 38

   11 start_2: Declaration1 . start_2

    BOOLEAN       shift, and go to state 7
    INCR          shift, and go to state 8
    DECR          shift, and go to state 9
    PLUS          shift, and go to state 10
    MINUS         shift, and go to state 11
    INTEGER       shift, and go to state 12
    CHARACTER     shift, and go to state 13
    FLOAT         shift, and go to state 14
    DOUBLE        shift, and go to state 15
    LONG          shift, and go to state 16
    SHORT         shift, and go to state 17
    VOLATILE      shift, and go to state 18
    SIGNED        shift, and go to state 19
    VOID          shift, and go to state 20
    CONST         shift, and go to state 21
    PARENOPEN     shift, and go to state 22
    ENUM          shift, and go to state 23
    STRUCT        shift, and go to state 24
    IDENTIFIER    shift, and go to state 25
    UNSIGNED      shift, and go to state 26
    SIGN_SHORT    shift, and go to state 27
    UNSIGN_SHORT  shift, and go to state 28
    SIGN_LONG     shift, and go to state 29
    UNSIGN_LONG   shift, and go to state 30
    SIGN_INT      shift, and go to state 31
    UNSIGN_INT    shift, and go to state 32
    FLOAT_DATA    shift, and go to state 33

    start_2        go to state 70
    Function       go to state 35
    TYPE           go to state 36
    NUM            go to state 37
    Declaration1   go to state 38
    id_declarator  go to state 39
    Assignment     go to state 40
    Function_Call  go to state 41
    Struct_State   go to state 42
    Enum_State     go to state 43


state 39

   61 Assignment: id_declarator .

    $default  reduce using rule 61 (Assignment)


state 40

   51 Declaration1: Assignment . SEMICOLON
   58 Assignment: Assignment . EQUALTO Assignment
   59           | Assignment . EQUALTO Function_Call
   62           | Assignment . COMMA type_marker Assignment
   63           | Assignment . PLUS marker Assignment
   64           | Assignment . MINUS marker Assignment
   65           | Assignment . ASTERISK marker Assignment
   66           | Assignment . DIV marker Assignment
   67           | Assignment . MOD marker Assignment
   68           | Assignment . INCR
   69           | Assignment . DECR
   72           | Assignment . BINARYONESCOMPLEMENT Assignment
   73           | Assignment . BINARYAND Assignment
   74           | Assignment . BINARYOR Assignment
   75           | Assignment . BINARYXOR Assignment
   76           | Assignment . LSHIFT Assignment
   77           | Assignment . RSHIFT Assignment

    ASTERISK              shift, and go to state 71
    INCR                  shift, and go to state 72
    DECR                  shift, and go to state 73
    MOD                   shift, and go to state 74
    PLUS                  shift, and go to state 75
    MINUS                 shift, and go to state 76
    DIV                   shift, and go to state 77
    BINARYXOR             shift, and go to state 78
    EQUALTO               shift, and go to state 79
    BINARYONESCOMPLEMENT  shift, and go to state 80
    BINARYAND             shift, and go to state 81
    BINARYOR              shift, and go to state 82
    SEMICOLON             shift, and go to state 83
    COMMA                 shift, and go to state 84
    LSHIFT                shift, and go to state 85
    RSHIFT                shift, and go to state 86


state 41

   52 Declaration1: Function_Call . SEMICOLON

    SEMICOLON  shift, and go to state 87


state 42

   53 Declaration1: Struct_State . SEMICOLON

    SEMICOLON  shift, and go to state 88


state 43

   54 Declaration1: Enum_State . SEMICOLON

    SEMICOLON  shift, and go to state 89


state 44

    6 Macros: HASH INCLUDE STRINGLITERAL . Macros1

    HASH  shift, and go to state 1

    $default  reduce using rule 8 (Macros1)

    Macros   go to state 90
    Macros1  go to state 91


state 45

    5 Macros: HASH INCLUDE LESST . IDENTIFIER DOT IDENTIFIER GREAT Macros1

    IDENTIFIER  shift, and go to state 92


state 46

   55 id_declarator: IDENTIFIER .

    $default  reduce using rule 55 (id_declarator)


state 47

   58 Assignment: Assignment . EQUALTO Assignment
   59           | Assignment . EQUALTO Function_Call
   62           | Assignment . COMMA type_marker Assignment
   63           | Assignment . PLUS marker Assignment
   64           | Assignment . MINUS marker Assignment
   65           | Assignment . ASTERISK marker Assignment
   66           | Assignment . DIV marker Assignment
   67           | Assignment . MOD marker Assignment
   68           | Assignment . INCR
   69           | Assignment . DECR
   70           | INCR Assignment .
   72           | Assignment . BINARYONESCOMPLEMENT Assignment
   73           | Assignment . BINARYAND Assignment
   74           | Assignment . BINARYOR Assignment
   75           | Assignment . BINARYXOR Assignment
   76           | Assignment . LSHIFT Assignment
   77           | Assignment . RSHIFT Assignment

    INCR                  shift, and go to state 72
    DECR                  shift, and go to state 73
    BINARYONESCOMPLEMENT  shift, and go to state 80

    $default  reduce using rule 70 (Assignment)


state 48

   58 Assignment: Assignment . EQUALTO Assignment
   59           | Assignment . EQUALTO Function_Call
   62           | Assignment . COMMA type_marker Assignment
   63           | Assignment . PLUS marker Assignment
   64           | Assignment . MINUS marker Assignment
   65           | Assignment . ASTERISK marker Assignment
   66           | Assignment . DIV marker Assignment
   67           | Assignment . MOD marker Assignment
   68           | Assignment . INCR
   69           | Assignment . DECR
   71           | DECR Assignment .
   72           | Assignment . BINARYONESCOMPLEMENT Assignment
   73           | Assignment . BINARYAND Assignment
   74           | Assignment . BINARYOR Assignment
   75           | Assignment . BINARYXOR Assignment
   76           | Assignment . LSHIFT Assignment
   77           | Assignment . RSHIFT Assignment

    INCR                  shift, and go to state 72
    DECR                  shift, and go to state 73
    BINARYONESCOMPLEMENT  shift, and go to state 80

    $default  reduce using rule 71 (Assignment)


state 49

   58 Assignment: Assignment . EQUALTO Assignment
   59           | Assignment . EQUALTO Function_Call
   62           | Assignment . COMMA type_marker Assignment
   63           | Assignment . PLUS marker Assignment
   64           | Assignment . MINUS marker Assignment
   65           | Assignment . ASTERISK marker Assignment
   66           | Assignment . DIV marker Assignment
   67           | Assignment . MOD marker Assignment
   68           | Assignment . INCR
   69           | Assignment . DECR
   72           | Assignment . BINARYONESCOMPLEMENT Assignment
   73           | Assignment . BINARYAND Assignment
   74           | Assignment . BINARYOR Assignment
   75           | Assignment . BINARYXOR Assignment
   76           | Assignment . LSHIFT Assignment
   77           | Assignment . RSHIFT Assignment
   80           | PLUS Assignment .

    INCR                  shift, and go to state 72
    DECR                  shift, and go to state 73
    BINARYONESCOMPLEMENT  shift, and go to state 80

    $default  reduce using rule 80 (Assignment)


state 50

   58 Assignment: Assignment . EQUALTO Assignment
   59           | Assignment . EQUALTO Function_Call
   62           | Assignment . COMMA type_marker Assignment
   63           | Assignment . PLUS marker Assignment
   64           | Assignment . MINUS marker Assignment
   65           | Assignment . ASTERISK marker Assignment
   66           | Assignment . DIV marker Assignment
   67           | Assignment . MOD marker Assignment
   68           | Assignment . INCR
   69           | Assignment . DECR
   72           | Assignment . BINARYONESCOMPLEMENT Assignment
   73           | Assignment . BINARYAND Assignment
   74           | Assignment . BINARYOR Assignment
   75           | Assignment . BINARYXOR Assignment
   76           | Assignment . LSHIFT Assignment
   77           | Assignment . RSHIFT Assignment
   79           | MINUS Assignment .

    INCR                  shift, and go to state 72
    DECR                  shift, and go to state 73
    BINARYONESCOMPLEMENT  shift, and go to state 80

    $default  reduce using rule 79 (Assignment)


state 51

   28 TYPE: SIGNED INTEGER .

    $default  reduce using rule 28 (TYPE)


state 52

   31 TYPE: SIGNED LONG .

    $default  reduce using rule 31 (TYPE)


state 53

   30 TYPE: SIGNED SHORT .

    $default  reduce using rule 30 (TYPE)


state 54

   37 TYPE: CONST INTEGER .

    $default  reduce using rule 37 (TYPE)


state 55

   39 TYPE: CONST CHARACTER .

    $default  reduce using rule 39 (TYPE)


state 56

   38 TYPE: CONST FLOAT .

    $default  reduce using rule 38 (TYPE)


state 57

   58 Assignment: Assignment . EQUALTO Assignment
   59           | Assignment . EQUALTO Function_Call
   62           | Assignment . COMMA type_marker Assignment
   63           | Assignment . PLUS marker Assignment
   64           | Assignment . MINUS marker Assignment
   65           | Assignment . ASTERISK marker Assignment
   66           | Assignment . DIV marker Assignment
   67           | Assignment . MOD marker Assignment
   68           | Assignment . INCR
   69           | Assignment . DECR
   72           | Assignment . BINARYONESCOMPLEMENT Assignment
   73           | Assignment . BINARYAND Assignment
   74           | Assignment . BINARYOR Assignment
   75           | Assignment . BINARYXOR Assignment
   76           | Assignment . LSHIFT Assignment
   77           | Assignment . RSHIFT Assignment
   78           | PARENOPEN Assignment . PARENCLOSE
